--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/icono"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_Nuevo">
-        <activity android:name=".MainActivity"
-            android:theme="@style/SplashTheme"
-            >
+        <activity android:name=".HomeActivity"></activity>
+        <activity
+            android:name=".AuthActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
